--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -28,5 +28,6 @@
 @import "_components/common/header";
 @import "_components/common/footer";
 
-@import "_components/roadmap";
+@import "_components/token";
 @import "_components/whitepaper";
+@import "_components/roadmap";
