--- a/src/scss/_components/roadmap.scss
+++ b/src/scss/_components/roadmap.scss
@@ -111,8 +111,10 @@
     li {
       position: relative;
       display: flex;
-      align-items: center;
-      height: 100px;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: center;
+      min-height: 100px;
       padding: 10px 40px;
       border-radius: 44px;
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -122,11 +124,15 @@
       text-transform: uppercase;
       color: #FFFFFF;
       @include adaptive(1279) {
-        height: 85px;
+        min-height: 85px;
       }
       @include adaptive(767) {
         font-size: 14px;
         line-height: 20px;
+      }
+
+      span {
+        color: #e34358;
       }
 
       &:not(:last-of-type) {
