--- a/src/scss/_components/token.scss
+++ b/src/scss/_components/token.scss
@@ -3,6 +3,10 @@
 .token {
   padding-top: 100px;
   padding-bottom: 100px;
+  @include adaptive(767) {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
 
   &__wrapper {
     display: flex;
