--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -29,5 +29,6 @@
 @import "_components/common/footer";
 
 @import "_components/token";
+@import "_components/donations";
 @import "_components/whitepaper";
 @import "_components/roadmap";
