Home page :::  - created platform section;

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -28,6 +28,7 @@
 @import "_components/common/header";
 @import "_components/common/footer";
 
+@import "_components/platform";
 @import "_components/token";
 @import "_components/donations";
 @import "_components/whitepaper";
