--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -794,6 +794,417 @@ picture {
   }
 }
 
+.platform {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+@media screen and (max-width: 1279px) {
+  .platform {
+    padding-bottom: 50px;
+  }
+}
+.platform__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+.platform__wrapper-left {
+  width: 100%;
+  max-width: 460px;
+  padding-right: 20px;
+}
+@media screen and (max-width: 1279px) {
+  .platform__wrapper-left {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    max-width: 100%;
+    padding-right: 0;
+  }
+}
+.platform__wrapper-right {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  min-width: 1px;
+  max-width: 100%;
+}
+@media screen and (max-width: 1279px) {
+  .platform__wrapper-right {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    padding-bottom: 40px;
+  }
+}
+.platform__title {
+  padding-bottom: 20px;
+  font-weight: 900;
+  font-size: 48px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+@media screen and (max-width: 1535px) {
+  .platform__title {
+    font-size: 42px;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .platform__title {
+    font-size: 35px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .platform__title {
+    font-size: 30px;
+  }
+}
+.platform__section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 40px 20px;
+  margin-bottom: 20px;
+  border-radius: 50px;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  background-color: #0B1A4D;
+}
+.platform__section p {
+  word-break: break-word;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 24px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+@media screen and (max-width: 1023px) {
+  .platform__section p {
+    font-size: 14px;
+  }
+}
+.platform__section p:not(:last-of-type) {
+  padding-bottom: 10px;
+}
+.platform__box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-bottom: 20px;
+}
+@media screen and (max-width: 767px) {
+  .platform__box {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+.platform__box > div {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  min-width: 1px;
+  max-width: 100%;
+}
+@media screen and (max-width: 767px) {
+  .platform__box > div {
+    -webkit-box-flex: 100%;
+        -ms-flex: 100%;
+            flex: 100%;
+  }
+}
+.platform__box > div:nth-of-type(1) {
+  padding-right: 20px;
+}
+@media screen and (max-width: 767px) {
+  .platform__box > div:nth-of-type(1) {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    padding-right: 0;
+    padding-bottom: 40px;
+  }
+}
+.platform__box > div:nth-of-type(2) {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-left: 20px;
+}
+@media screen and (max-width: 767px) {
+  .platform__box > div:nth-of-type(2) {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    padding-left: 0;
+    padding-bottom: 40px;
+  }
+}
+.platform__box > div:nth-of-type(2) img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
+}
+.platform__box-name {
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 24px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #E34358;
+}
+@media screen and (max-width: 1439px) {
+  .platform__box-name {
+    font-size: 20px;
+  }
+}
+.platform__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.platform__list li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.platform__list li:nth-of-type(even) {
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+.platform__list li:not(:last-of-type) {
+  padding-bottom: 20px;
+}
+.platform__list li p {
+  padding-bottom: 10px;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 24px;
+  text-transform: uppercase;
+  color: #1C337E;
+}
+@media screen and (max-width: 1439px) {
+  .platform__list li p {
+    font-size: 20px;
+  }
+}
+.platform__list li span {
+  display: block;
+  text-align: center;
+  font-weight: 900;
+  font-size: 36px;
+  line-height: 24px;
+  text-transform: uppercase;
+  color: #E34358;
+}
+@media screen and (max-width: 1439px) {
+  .platform__list li span {
+    font-size: 33px;
+  }
+}
+.platform__table {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  min-height: 130px;
+  border-radius: 88px;
+  background: -o-linear-gradient(0.05deg, #FFFFFF 0.66%, rgba(28, 51, 126, 0.13) 49.77%, #FFFFFF 97.86%);
+  background: linear-gradient(89.95deg, #FFFFFF 0.66%, rgba(28, 51, 126, 0.13) 49.77%, #FFFFFF 97.86%);
+}
+@media screen and (max-width: 767px) {
+  .platform__table {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+.platform__table > div {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  min-width: 1px;
+  max-width: 100%;
+  min-height: 1px;
+  max-height: 100%;
+}
+@media screen and (max-width: 767px) {
+  .platform__table > div {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    min-height: 100px;
+  }
+}
+.platform__table > div:not(:last-of-type) {
+  border-right: 1px solid #000;
+}
+@media screen and (max-width: 767px) {
+  .platform__table > div:not(:last-of-type) {
+    border-right: none;
+    border-bottom: 1px solid #000;
+  }
+}
+.platform__table > div > div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  min-height: 100%;
+}
+.platform__table > div p {
+  padding-bottom: 10px;
+  font-weight: 900;
+  font-size: 18px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #0B1A4C;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+@media screen and (max-width: 1439px) {
+  .platform__table > div p {
+    font-size: 16px;
+  }
+}
+.platform__table > div span {
+  display: block;
+  font-weight: bold;
+  font-size: 12px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #0B1A4C;
+}
+@media screen and (max-width: 1439px) {
+  .platform__table > div span {
+    font-size: 10px;
+  }
+}
+.platform__table > div span i {
+  color: #E34358;
+}
+.platform__table-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+.platform__table-title {
+  padding-bottom: 20px;
+  font-weight: bold;
+  font-size: 18px;
+  text-transform: uppercase;
+  color: #0B1A4C;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.platform .roadmap__block {
+  padding-left: 80px;
+  padding-right: 80px;
+}
+@media screen and (max-width: 1023px) {
+  .platform .roadmap__block {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .platform .roadmap__block {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+.platform .roadmap__block-title {
+  max-width: 860px;
+  min-height: 150px;
+  font-size: 88px;
+  line-height: 0.8;
+}
+@media screen and (max-width: 1535px) {
+  .platform .roadmap__block-title {
+    max-width: 800px;
+    font-size: 78px;
+  }
+}
+@media screen and (max-width: 1439px) {
+  .platform .roadmap__block-title {
+    max-width: 750px;
+    min-height: 130px;
+    font-size: 68px;
+  }
+}
+@media screen and (max-width: 1365px) {
+  .platform .roadmap__block-title {
+    max-width: 700px;
+  }
+}
+@media screen and (max-width: 1279px) {
+  .platform .roadmap__block-title {
+    max-width: 600px;
+    font-size: 58px;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .platform .roadmap__block-title {
+    max-width: 500px;
+    font-size: 48px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .platform .roadmap__block-title {
+    max-width: 200px;
+    font-size: 30px;
+  }
+}
+
 .token {
   padding-top: 100px;
   padding-bottom: 100px;
@@ -940,6 +1351,7 @@ picture {
     max-width: 200px;
   }
 }
+
 .donations {
   padding-top: 100px;
   padding-bottom: 200px;
