--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,5 +8,6 @@ extends shared/_layout
 block content
   main.main(class!= pageClassName)
 
+    include components/platform
     include components/token
     include components/donations
