--- a/src/listPages.pug
+++ b/src/listPages.pug
@@ -3,7 +3,7 @@
   const pages = [{
       name: 'Homepage',
       href: 'index.html',
-      progress: '1'
+      progress: '95'
     }, {
       name: 'WhitePaper',
       href: 'whitepaper.html',
@@ -11,6 +11,14 @@
     }, {
       name: 'Roadmap',
       href: 'roadmap.html',
+      progress: '95'
+    }, {
+      name: 'Roadmap',
+      href: 'roadmap-1.html',
+      progress: '1'
+    }, {
+      name: 'Tokenomics',
+      href: 'tokenomics.html',
       progress: '95'
     }
   ];
