--- a/src/scss/_components/common/_header.scss
+++ b/src/scss/_components/common/_header.scss
@@ -161,6 +161,10 @@
       @include adaptive(767) {
         font-size: 20px;
       }
+
+      &.is-active {
+        color: #f53548;
+      }
     }
   }
 }
