--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -33,3 +33,4 @@
 @import "_components/donations";
 @import "_components/whitepaper";
 @import "_components/roadmap";
+@import "_components/tokenomics";
