--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -34,3 +34,4 @@
 @import "_components/whitepaper";
 @import "_components/roadmap";
 @import "_components/tokenomics";
+@import "_components/milestone";
