--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -182,8 +182,7 @@ body {
           flex-direction: column;
   margin: 0;
   padding: 110px 0 0;
-  background: -o-linear-gradient(45deg, #00395a 0%, #1c1561 100%);
-  background: linear-gradient(45deg, #00395a 0%, #1c1561 100%);
+  background: #0B1A4D;
   line-height: 1.42857143;
   font-size: 14px;
   font-weight: normal;
@@ -877,7 +876,7 @@ picture {
   border-radius: 50px;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  background-color: #0B1A4D;
+  background-color: #010430;
 }
 .platform__section p {
   word-break: break-word;
@@ -1007,7 +1006,7 @@ picture {
   font-size: 24px;
   line-height: 24px;
   text-transform: uppercase;
-  color: #1C337E;
+  color: #F53548;
 }
 @media screen and (max-width: 1439px) {
   .platform__list li p {
@@ -1021,7 +1020,7 @@ picture {
   font-size: 36px;
   line-height: 24px;
   text-transform: uppercase;
-  color: #E34358;
+  color: #fff;
 }
 @media screen and (max-width: 1439px) {
   .platform__list li span {
@@ -1035,8 +1034,8 @@ picture {
   width: 100%;
   min-height: 130px;
   border-radius: 88px;
-  background: -o-linear-gradient(0.05deg, #FFFFFF 0.66%, rgba(28, 51, 126, 0.13) 49.77%, #FFFFFF 97.86%);
-  background: linear-gradient(89.95deg, #FFFFFF 0.66%, rgba(28, 51, 126, 0.13) 49.77%, #FFFFFF 97.86%);
+  background: -o-linear-gradient(179.83deg, #1C337E 14.88%, #F9FAFF 89.04%, #F9FAFF 89.04%);
+  background: linear-gradient(270.17deg, #1C337E 14.88%, #F9FAFF 89.04%, #F9FAFF 89.04%);
 }
 @media screen and (max-width: 767px) {
   .platform__table {
@@ -1146,7 +1145,7 @@ picture {
   font-weight: bold;
   font-size: 18px;
   text-transform: uppercase;
-  color: #0B1A4C;
+  color: #fff;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .platform .roadmap__block {
@@ -1317,7 +1316,7 @@ picture {
   border-radius: 50px;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  background-color: #0B1A4D;
+  background-color: #010430;
 }
 .token__section p {
   word-break: break-word;
@@ -1438,7 +1437,7 @@ picture {
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 50px;
-  background-color: #0B1A4D;
+  background-color: #01052F;
 }
 @media screen and (max-width: 1365px) {
   .whitepaper__section {
@@ -1533,9 +1532,7 @@ picture {
       -ms-flex-direction: column;
           flex-direction: column;
   padding: 130px 180px;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.2904)), to(rgba(255, 255, 255, 0.5368)));
-  background: -o-linear-gradient(top, rgba(255, 255, 255, 0.2904) 0%, rgba(255, 255, 255, 0.5368) 100%);
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0.2904) 0%, rgba(255, 255, 255, 0.5368) 100%);
+  background: rgba(28, 47, 108, 0.66);
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 88px;
@@ -1733,7 +1730,7 @@ picture {
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 50px;
-  background-color: #0B1A4D;
+  background-color: #01052F;
 }
 @media screen and (max-width: 1365px) {
   .tokenomics__wrapper {
@@ -1799,6 +1796,139 @@ picture {
 }
 @media screen and (max-width: 767px) {
   .tokenomics__desc {
+    font-size: 14px;
+  }
+}
+
+.milestone {
+  padding-top: 100px;
+  padding-bottom: 200px;
+}
+@media screen and (max-width: 1279px) {
+  .milestone {
+    padding-top: 75px;
+    padding-bottom: 150px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .milestone {
+    padding-top: 50px;
+    padding-bottom: 100px;
+  }
+}
+.milestone__title {
+  padding-bottom: 100px;
+  font-weight: 900;
+  font-size: 48px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+@media screen and (max-width: 1535px) {
+  .milestone__title {
+    font-size: 42px;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .milestone__title {
+    font-size: 35px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .milestone__title {
+    padding-bottom: 75px;
+    font-size: 30px;
+  }
+}
+.milestone__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 100px 100px 80px;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 50px;
+  background-color: #01052F;
+}
+@media screen and (max-width: 1365px) {
+  .milestone__wrapper {
+    padding: 50px 50px 30px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .milestone__wrapper {
+    padding: 40px 20px 20px;
+  }
+}
+.milestone__wrapper .milestone__title {
+  padding-bottom: 20px;
+  text-align: center;
+}
+.milestone__wrapper > img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin: 20px auto;
+}
+.milestone__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-left: 20px;
+  padding-bottom: 20px;
+  list-style-type: disc;
+}
+.milestone__list li {
+  list-style-type: disc;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 24px;
+  text-align: center;
+  color: #ffffff;
+  text-transform: uppercase;
+}
+@media screen and (max-width: 1365px) {
+  .milestone__list li {
+    font-size: 18px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .milestone__list li {
+    font-size: 14px;
+  }
+}
+.milestone__list li span {
+  color: #f53548;
+}
+.milestone__desc {
+  padding-bottom: 20px;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 24px;
+  text-align: center;
+  color: #ffffff;
+  text-transform: uppercase;
+}
+@media screen and (max-width: 1365px) {
+  .milestone__desc {
+    font-size: 18px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .milestone__desc {
     font-size: 14px;
   }
 }
