--- a/src/pug/components/common/_header.pug
+++ b/src/pug/components/common/_header.pug
@@ -23,7 +23,7 @@ nav#header.header
         .header__wrapper-middle
 
           mav.header__nav
-            a(href="#" class!= '') Roadmap
+            a(href="/roadmap-1.html" class!= (pageClassName === 'p-roadmap')?'is-active':'') Roadmap
             a(href="/whitepaper.html" class!= (pageClassName === 'p-whitepaper')?'is-active':'') WHITEPAPER
             a(href="/tokenomics.html" class!= (pageClassName === 'p-tokenomics')?'is-active':'') Tokenomics
 
