--- a/src/scss/_components/roadmap.scss
+++ b/src/scss/_components/roadmap.scss
@@ -36,7 +36,8 @@
     align-items: center;
     flex-direction: column;
     padding: 130px 180px;
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0.2904) 0%, rgba(255, 255, 255, 0.5368) 100%);
+    //background: linear-gradient(180deg, rgba(255, 255, 255, 0.2904) 0%, rgba(255, 255, 255, 0.5368) 100%);
+    background: rgba(28, 47, 108, 0.66);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 88px;
     @include adaptive(1535) {
