--- a/src/scss/_components/token.scss
+++ b/src/scss/_components/token.scss
@@ -84,7 +84,7 @@
     padding: 40px 20px;
     border-radius: 50px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    background-color: #0B1A4D;
+    background-color: #010430;
 
     p {
       word-break: break-word;
