--- a/src/scss/_components/tokenomics.scss
+++ b/src/scss/_components/tokenomics.scss
@@ -37,7 +37,7 @@
     padding: 100px 100px 80px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 50px;
-    background-color: #0B1A4D;
+    background-color: #01052F;
     @include adaptive(1365) {
       padding: 50px 50px 30px;
     }
