--- a/src/scss/_shared/_main-setting-reset.scss
+++ b/src/scss/_shared/_main-setting-reset.scss
@@ -38,7 +38,7 @@ body {
   margin: 0;
   padding: 110px 0 0;
   //background-color: #ffffff;
-  background: linear-gradient(45deg, rgba(#00395a,1) 0%,rgba(#1c1561,1) 100%);
+  background: #0B1A4D;
   line-height: 1.42857143;
   font-size: 14px;
   font-weight: normal;
