--- a/src/pug/components/common/_header.pug
+++ b/src/pug/components/common/_header.pug
@@ -7,7 +7,7 @@ nav#header.header
 
         div
           .logo.logo--header
-            a.logo__btn(href="#")
+            a.logo__btn(href="/index.html")
               img(src="img/logo.svg" alt="")
 
           .c-btn__wrapper
@@ -33,7 +33,7 @@ nav#header.header
             a.c-btn(href="#")
               span chart
             a.c-btn(href="#")
-              span buy on pancake swap
+              span buy on uniswap
             a.c-btn(href="#")
               span COnnect wallet
 
