--- a/src/pug/components/tokenomics.pug
+++ b/src/pug/components/tokenomics.pug
@@ -27,10 +27,11 @@ section#tokenomics.tokenomics
       h3.tokenomics__title Token Distribution
 
       p.tokenomics__desc The Giving Foundation will create 250,000,000 GIV tokens (250 million.)
-      p.tokenomics__desc 125,000,000 Giv tokens put into giv’s liquidity pool that represents our circulating supply
-      p.tokenomics__desc 50,000,000 (50M) Giv Tokens Locked in a seperate wallet designed to collect token rewards to fund community giveaways
-      p.tokenomics__desc 50,000,000 (50M) Giv Tokens in the wallets of Developers to keep the operation of the giving platform running, Preform dApp updates & add new features.
-      p.tokenomics__desc 25,000,000 (25M) Giv tokens in a reserve wallet for future announcements
+      ul.tokenomics__list
+        li 125,000,000 Giv tokens put into giv’s liquidity pool that represents our circulating supply
+        li 50,000,000 (50M) Giv Tokens Locked in a seperate wallet designed to collect token rewards to fund community giveaways
+        li 50,000,000 (50M) Giv Tokens in the wallets of Developers to keep the operation of the giving platform running, Preform dApp updates & add new features.
+        li 25,000,000 (25M) Giv tokens in a reserve wallet for future announcements
 
       img(src="img/img-tokenomics-2.png" srcset="img/img-tokenomics-2@2x.png 2x" alt="")
 
