--- a/src/scss/_components/milestone.scss
+++ b/src/scss/_components/milestone.scss
@@ -46,7 +46,8 @@
     }
 
     .milestone__title {
-      padding-bottom: 20px;
+      padding-top: 40px;
+      padding-bottom: 40px;
       text-align: center;
     }
 
@@ -54,8 +55,16 @@
       display: block;
       max-width: 100%;
       height: auto;
-      margin: 20px auto;
+      margin: 40px auto;
     }
+  }
+
+  &__list,
+  &__desc {
+    width: 100%;
+    max-width: 1325px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   &__list {
@@ -83,6 +92,13 @@
 
       span {
         color: #f53548;
+        font-size: 24px;
+        @include adaptive(1365) {
+          font-size: 22px;
+        }
+        @include adaptive(767) {
+          font-size: 18px;
+        }
       }
     }
   }
@@ -100,6 +116,43 @@
     }
     @include adaptive(767) {
       font-size: 14px;
+    }
+
+    span {
+      font-size: 24px;
+      @include adaptive(1365) {
+        font-size: 22px;
+      }
+      @include adaptive(767) {
+        font-size: 18px;
+      }
+    }
+  }
+
+  &__table {
+    display: block;
+    max-width: 100%;
+    height: auto;
+    margin: 40px auto;
+    @include adaptive(767) {
+      margin-right: 0;
+    }
+
+    &-scroll {
+      @include adaptive(767) {
+        width: 768px;
+      }
+
+      &-wrapper {
+        @include adaptive(767) {
+          overflow: hidden;
+          overflow-x: auto;
+          white-space: nowrap;
+          position: relative;
+          width: calc(100% + 40px);
+          padding-left: 20px;
+        }
+      }
     }
   }
 }
