--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -1450,7 +1450,8 @@ picture {
   }
 }
 .whitepaper__section .whitepaper__title {
-  padding-bottom: 20px;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 .whitepaper__desc {
   padding-bottom: 20px;
@@ -1475,9 +1476,7 @@ picture {
   display: block;
   max-width: 100%;
   height: auto;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 20px;
+  margin: 40px auto;
 }
 
 .roadmap {
@@ -1719,13 +1718,14 @@ picture {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   padding: 100px 100px 80px;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -1743,7 +1743,8 @@ picture {
   }
 }
 .tokenomics__wrapper .tokenomics__title {
-  padding-bottom: 20px;
+  padding-top: 40px;
+  padding-bottom: 40px;
   text-align: center;
 }
 .tokenomics__wrapper .tokenomics__title:not(:first-of-type) {
@@ -1753,8 +1754,7 @@ picture {
   display: block;
   max-width: 100%;
   height: auto;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 40px auto;
 }
 .tokenomics__wrapper h4 {
   font-weight: 900;
@@ -1779,6 +1779,52 @@ picture {
 }
 .tokenomics__wrapper h4:first-of-type {
   padding-top: 40px;
+}
+.tokenomics__list, .tokenomics__desc {
+  width: 100%;
+  max-width: 1325px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.tokenomics__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-left: 20px;
+  padding-bottom: 20px;
+  list-style-type: disc;
+}
+.tokenomics__list li {
+  list-style-type: disc;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 24px;
+  text-align: center;
+  color: #ffffff;
+  text-transform: uppercase;
+}
+@media screen and (max-width: 1365px) {
+  .tokenomics__list li {
+    font-size: 18px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .tokenomics__list li {
+    font-size: 14px;
+  }
+}
+.tokenomics__list li:not(:last-of-type) {
+  padding-bottom: 20px;
+}
+.tokenomics__list li span {
+  color: #f53548;
 }
 .tokenomics__desc {
   padding-bottom: 20px;
@@ -1867,14 +1913,21 @@ picture {
   }
 }
 .milestone__wrapper .milestone__title {
-  padding-bottom: 20px;
+  padding-top: 40px;
+  padding-bottom: 40px;
   text-align: center;
 }
 .milestone__wrapper > img {
   display: block;
   max-width: 100%;
   height: auto;
-  margin: 20px auto;
+  margin: 40px auto;
+}
+.milestone__list, .milestone__desc {
+  width: 100%;
+  max-width: 1325px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .milestone__list {
   display: -webkit-box;
@@ -1912,6 +1965,17 @@ picture {
 }
 .milestone__list li span {
   color: #f53548;
+  font-size: 24px;
+}
+@media screen and (max-width: 1365px) {
+  .milestone__list li span {
+    font-size: 22px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .milestone__list li span {
+    font-size: 18px;
+  }
 }
 .milestone__desc {
   padding-bottom: 20px;
@@ -1930,5 +1994,44 @@ picture {
 @media screen and (max-width: 767px) {
   .milestone__desc {
     font-size: 14px;
+  }
+}
+.milestone__desc span {
+  font-size: 24px;
+}
+@media screen and (max-width: 1365px) {
+  .milestone__desc span {
+    font-size: 22px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .milestone__desc span {
+    font-size: 18px;
+  }
+}
+.milestone__table {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin: 40px auto;
+}
+@media screen and (max-width: 767px) {
+  .milestone__table {
+    margin-right: 0;
+  }
+}
+@media screen and (max-width: 767px) {
+  .milestone__table-scroll {
+    width: 768px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .milestone__table-scroll-wrapper {
+    overflow: hidden;
+    overflow-x: auto;
+    white-space: nowrap;
+    position: relative;
+    width: calc(100% + 40px);
+    padding-left: 20px;
   }
 }
