--- a/src/scss/_components/tokenomics.scss
+++ b/src/scss/_components/tokenomics.scss
@@ -32,6 +32,7 @@
 
   &__wrapper {
     display: flex;
+    align-items: center;
     flex-direction: column;
     align-items: center;
     padding: 100px 100px 80px;
@@ -46,7 +47,8 @@
     }
 
     .tokenomics__title {
-      padding-bottom: 20px;
+      padding-top: 40px;
+      padding-bottom: 40px;
       text-align: center;
 
       &:not(:first-of-type) {
@@ -58,8 +60,7 @@
       display: block;
       max-width: 100%;
       height: auto;
-      margin-left: auto;
-      margin-right: auto;
+      margin: 40px auto;
     }
 
     h4 {
@@ -81,6 +82,47 @@
 
       &:first-of-type {
         padding-top: 40px;
+      }
+    }
+  }
+
+  &__list,
+  &__desc {
+    width: 100%;
+    max-width: 1325px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  &__list {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding-left: 20px;
+    padding-bottom: 20px;
+    list-style-type: disc;
+
+    li {
+      list-style-type: disc;
+      font-weight: bold;
+      font-size: 20px;
+      line-height: 24px;
+      text-align: center;
+      color: #ffffff;
+      text-transform: uppercase;
+      @include adaptive(1365) {
+        font-size: 18px;
+      }
+      @include adaptive(767) {
+        font-size: 14px;
+      }
+
+      &:not(:last-of-type) {
+        padding-bottom: 20px;
+      }
+
+      span {
+        color: #f53548;
       }
     }
   }
