--- a/src/scss/_components/whitepaper.scss
+++ b/src/scss/_components/whitepaper.scss
@@ -46,7 +46,8 @@
     }
 
     .whitepaper__title {
-      padding-bottom: 20px;
+      padding-top: 40px;
+      padding-bottom: 40px;
     }
   }
 
@@ -70,9 +71,7 @@
     display: block;
     max-width: 100%;
     height: auto;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 20px;
+    margin: 40px auto;
   }
 }
 
