--- a/src/listPages.pug
+++ b/src/listPages.pug
@@ -5,6 +5,10 @@
       href: 'index.html',
       progress: '95'
     }, {
+      name: 'Homepage Design',
+      href: 'homepage.html',
+      progress: '1'
+    }, {
       name: 'WhitePaper',
       href: 'whitepaper.html',
       progress: '95'
