--- a/src/scss/_components/common/_header.scss
+++ b/src/scss/_components/common/_header.scss
@@ -6,7 +6,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  background-color: #0b1a4d;
+  background-color: #000E38;
 
   &__wrapper {
     display: flex;
