--- a/src/scss/_shared/_common.scss
+++ b/src/scss/_shared/_common.scss
@@ -1,3 +1,47 @@
 // COMMON :: START
 
+.c-modal {
+  &#welcomeModal {
+    max-width: 650px;
+    padding: 75px 50px;
+    @include adaptive(767) {
+      padding: 50px 25px;
+    }
+
+    .c-modal {
+      &__body {
+        a {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          max-width: 500px;
+          margin-left: auto;
+          margin-right: auto;
+          padding: 20px 40px;
+          border-radius: 12px;
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          background: linear-gradient(270.17deg, #1C337E 14.88%, #F9FAFF 89.04%, #F9FAFF 89.04%);
+          font-weight: 900;
+          color: #0B1A4C;
+          font-size: 40px;
+          line-height: 1.1;
+          text-align: center;
+          letter-spacing: 3px;
+          text-transform: uppercase;
+          text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          @include adaptive(767) {
+            font-size: 25px;
+          }
+        }
+      }
+    }
+  }
+
+  .mfp-close {
+    opacity: 1;
+    color: #ffffff;
+    font-size: 40px;
+  }
+}
+
 // COMMON :: END
