Tokenomics page :::  - re-do;

--- a/src/pug/components/homepage.pug
+++ b/src/pug/components/homepage.pug
@@ -67,4 +67,8 @@ section#homepage.homepage
 
         h2.homepage__title!= "Join our community today for more insights!"
 
+      .homepage__row.homepage__row-6
+
+        a(href="#" popup-close-js) Continue to website
+
 // SECTION :: END
