--- a/src/pug/components/tokenomics.pug
+++ b/src/pug/components/tokenomics.pug
@@ -9,7 +9,7 @@ section#tokenomics.tokenomics
 
       h3.tokenomics__title Giv Token
 
-      p.tokenomics__desc $GIV is the cryptographic utility token that powers the GIV Finance ecosystem, and is based on the ERC-20 standard. Its primary use is to enable consumer access to our platform, as well as generate rewards to be distributed to their destinations
+      p.tokenomics__desc $GIV is the cryptographic utility token that powers the GIV Finance ecosystem, and is based on the solana network. Its primary use is to enable consumer access to our platform, as well as generate rewards to be distributed to their destinations
       p.tokenomics__desc GIV is used for the following:
       p.tokenomics__desc 1. Funds the Giving Pool
       p.tokenomics__desc 2. Rewards holders
