--- a/src/scss/_shared/_main-setting-reset.scss
+++ b/src/scss/_shared/_main-setting-reset.scss
@@ -38,7 +38,7 @@ body {
   margin: 0;
   padding: 110px 0 0;
   //background-color: #ffffff;
-  background: #0B1A4D;
+  background: #171F39;
   line-height: 1.42857143;
   font-size: 14px;
   font-weight: normal;
