--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -182,7 +182,7 @@ body {
           flex-direction: column;
   margin: 0;
   padding: 110px 0 0;
-  background: #0B1A4D;
+  background: #171F39;
   line-height: 1.42857143;
   font-size: 14px;
   font-weight: normal;
@@ -310,15 +310,9 @@ picture {
 }
 
 .c-modal#welcomeModal {
-  max-width: 650px;
-  padding: 75px 50px;
+  max-width: 95%;
 }
-@media screen and (max-width: 767px) {
-  .c-modal#welcomeModal {
-    padding: 50px 25px;
-  }
-}
-.c-modal#welcomeModal .c-modal__body a {
+.c-modal#welcomeModal .c-modal__body .homepage__row.homepage__row-6 a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -347,7 +341,7 @@ picture {
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 @media screen and (max-width: 767px) {
-  .c-modal#welcomeModal .c-modal__body a {
+  .c-modal#welcomeModal .c-modal__body .homepage__row.homepage__row-6 a {
     font-size: 25px;
   }
 }
@@ -363,7 +357,7 @@ picture {
   max-width: 550px;
   margin-left: auto;
   margin-right: auto;
-  border-radius: 30px;
+  border-radius: 50px;
   background: -webkit-gradient(linear, left top, left bottom, from(#000E38), to(#1C2F6C));
   background: -o-linear-gradient(top, #000E38 0%, #1C2F6C 100%);
   background: linear-gradient(180deg, #000E38 0%, #1C2F6C 100%);
@@ -471,7 +465,6 @@ picture {
 .c-btn {
   outline: none;
   cursor: pointer;
-  overflow: hidden;
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -483,55 +476,42 @@ picture {
       -ms-flex-pack: center;
           justify-content: center;
   width: auto;
-  height: 50px;
+  height: 40px;
   margin: 0;
-  padding-left: 20px;
-  padding-right: 20px;
-  border-radius: 19px;
+  padding: 0;
+  border-radius: 100px;
   -webkit-box-shadow: none;
           box-shadow: none;
   border: none;
-  background: -webkit-gradient(linear, left top, left bottom, from(#F53548), to(#9803A4));
-  background: -o-linear-gradient(top, #F53548 0%, #9803A4 100%);
-  background: linear-gradient(180deg, #F53548 0%, #9803A4 100%);
+  background-color: #552222;
 }
-@media screen and (max-width: 767px) {
-  .c-btn {
-    height: 45px;
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-}
-.c-btn:after {
+.c-btn:after, .c-btn:before {
   content: "";
-  opacity: 0;
   position: absolute;
   top: 0;
-  left: 0;
-  -webkit-transform: translateY(100%);
-      -ms-transform: translateY(100%);
-          transform: translateY(100%);
-  width: 100%;
+  width: 50%;
   height: 100%;
-  background: -webkit-gradient(linear, left top, left bottom, from(#9803A4), to(#F53548));
-  background: -o-linear-gradient(top, #9803A4 0%, #F53548 100%);
-  background: linear-gradient(180deg, #9803A4 0%, #F53548 100%);
-  -webkit-transition: opacity 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
-  transition: opacity 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
-  -o-transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
-  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
-  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+  border: 4px solid #F55757;
+  background-color: #552222;
+  -webkit-filter: blur(15px);
+          filter: blur(15px);
+  -webkit-transition: opacity 0.3s ease-in-out;
+  -o-transition: opacity 0.3s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
 }
-.c-btn:hover:after {
-  opacity: 1;
-  -webkit-transform: translateY(0);
-      -ms-transform: translateY(0);
-          transform: translateY(0);
-  -webkit-transition: opacity 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
-  transition: opacity 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
-  -o-transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
-  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
-  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+.c-btn:after {
+  left: 0;
+  border-radius: 50% 0 0 50px;
+}
+.c-btn:before {
+  right: 0;
+  border-radius: 0 50% 50px 0;
+}
+.c-btn:hover:before, .c-btn:hover:after {
+  opacity: 0.45;
+  -webkit-transition: opacity 0.3s ease-in-out;
+  -o-transition: opacity 0.3s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
 }
 .c-btn__wrapper {
   display: -webkit-box;
@@ -544,13 +524,33 @@ picture {
 .c-btn span {
   z-index: 2;
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  height: 100%;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-radius: 2rem;
   font-size: 14px;
   text-align: center;
   text-transform: uppercase;
   color: #FFFFFF;
+  background-image: url("../img/btn-bg.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 @media screen and (max-width: 767px) {
   .c-btn span {
+    padding-left: 10px;
+    padding-right: 10px;
     font-size: 13px;
   }
 }
@@ -561,9 +561,36 @@ picture {
   top: 0;
   left: 0;
   width: 100%;
+  -webkit-box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+  background: -webkit-gradient(linear, right top, left top, color-stop(1.56%, rgba(32, 48, 104, 0.2226)), color-stop(49.48%, rgba(241, 243, 250, 0.2226)), to(rgba(18, 26, 52, 0.4134)));
+  background: -o-linear-gradient(right, rgba(32, 48, 104, 0.2226) 1.56%, rgba(241, 243, 250, 0.2226) 49.48%, rgba(18, 26, 52, 0.4134) 100%);
+  background: linear-gradient(270deg, rgba(32, 48, 104, 0.2226) 1.56%, rgba(241, 243, 250, 0.2226) 49.48%, rgba(18, 26, 52, 0.4134) 100%);
+  -webkit-transition: background-color 0.3s ease-in-out;
+  -o-transition: background-color 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out;
+}
+.header.is-fixed {
   background-color: #000E38;
+  -webkit-transition: background-color 0.3s ease-in-out;
+  -o-transition: background-color 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out;
+}
+.header:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("../img/img-header-bg.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 .header__wrapper {
+  z-index: 2;
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -574,6 +601,14 @@ picture {
       -ms-flex-pack: justify;
           justify-content: space-between;
   height: 110px;
+  padding-left: 40px;
+  padding-right: 40px;
+}
+@media screen and (max-width: 1439px) {
+  .header__wrapper {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 @media screen and (max-width: 767px) {
   .header__wrapper {
@@ -588,7 +623,7 @@ picture {
       -ms-flex-align: center;
           align-items: center;
 }
-@media screen and (max-width: 1439px) {
+@media screen and (max-width: 1279px) {
   .header__wrapper-left {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
@@ -612,7 +647,7 @@ picture {
 .header__wrapper-left > div:nth-of-type(2) {
   display: none;
 }
-@media screen and (max-width: 1439px) {
+@media screen and (max-width: 1279px) {
   .header__wrapper-left > div:nth-of-type(2) {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -634,7 +669,7 @@ picture {
       -ms-flex-pack: end;
           justify-content: flex-end;
 }
-@media screen and (max-width: 1439px) {
+@media screen and (max-width: 1279px) {
   .header__wrapper-right {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -646,7 +681,7 @@ picture {
     width: 100%;
   }
 }
-@media screen and (max-width: 1439px) {
+@media screen and (max-width: 1279px) {
   .header__wrapper-right .c-btn {
     width: 100%;
   }
@@ -654,13 +689,13 @@ picture {
 .header__wrapper-right .c-btn:not(:last-of-type) {
   margin-right: 15px;
 }
-@media screen and (max-width: 1439px) {
+@media screen and (max-width: 1279px) {
   .header__wrapper-right .c-btn:not(:last-of-type) {
     margin-right: 0;
     margin-bottom: 20px;
   }
 }
-@media screen and (max-width: 1439px) {
+@media screen and (max-width: 1279px) {
   .header__wrapper-right .c-btn__wrapper {
     width: 100%;
     -webkit-box-orient: vertical;
@@ -686,7 +721,7 @@ picture {
   max-width: 100%;
   padding-left: 20px;
 }
-@media screen and (max-width: 1439px) {
+@media screen and (max-width: 1279px) {
   .header__wrapper-mobile {
     z-index: 1000;
     overflow: hidden;
@@ -756,7 +791,7 @@ picture {
       -ms-flex-pack: center;
           justify-content: center;
 }
-@media screen and (max-width: 1439px) {
+@media screen and (max-width: 1279px) {
   .header__nav {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -780,9 +815,9 @@ picture {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-left: 20px;
-  margin-right: 20px;
-  font-size: 24px;
+  margin-left: 15px;
+  margin-right: 15px;
+  font-size: 16px;
   text-align: center;
   text-transform: uppercase;
   color: #FFFFFF;
@@ -811,14 +846,13 @@ picture {
 .header__nav a:after {
   right: 50%;
 }
-@media screen and (max-width: 1535px) {
+@media screen and (max-width: 1439px) {
   .header__nav a {
     margin-left: 10px;
     margin-right: 10px;
-    font-size: 22px;
   }
 }
-@media screen and (max-width: 1439px) {
+@media screen and (max-width: 1279px) {
   .header__nav a {
     margin-bottom: 30px;
   }
@@ -834,8 +868,7 @@ picture {
 
 .footer {
   padding-top: 50px;
-  padding-bottom: 30px;
-  background-color: #000e38;
+  padding-bottom: 50px;
 }
 .footer__title {
   font-weight: 900;
@@ -891,12 +924,28 @@ picture {
   -o-transition: opacity 0.3s ease-in-out;
   transition: opacity 0.3s ease-in-out;
 }
+.footer__social a:hover img {
+  -webkit-filter: drop-shadow(0 5px 2px rgba(0, 0, 0, 0.3));
+          filter: drop-shadow(0 5px 2px rgba(0, 0, 0, 0.3));
+  -webkit-transition: -webkit-filter 0.3s ease-in-out;
+  transition: -webkit-filter 0.3s ease-in-out;
+  -o-transition: filter 0.3s ease-in-out;
+  transition: filter 0.3s ease-in-out;
+  transition: filter 0.3s ease-in-out, -webkit-filter 0.3s ease-in-out;
+}
 .footer__social a img {
   display: block;
   max-width: 100%;
   height: auto;
   margin-left: 10px;
   margin-right: 10px;
+  -webkit-filter: drop-shadow(0 12px 2px rgba(0, 0, 0, 0.3));
+          filter: drop-shadow(0 12px 2px rgba(0, 0, 0, 0.3));
+  -webkit-transition: -webkit-filter 0.3s ease-in-out;
+  transition: -webkit-filter 0.3s ease-in-out;
+  -o-transition: filter 0.3s ease-in-out;
+  transition: filter 0.3s ease-in-out;
+  transition: filter 0.3s ease-in-out, -webkit-filter 0.3s ease-in-out;
 }
 @media screen and (max-width: 767px) {
   .footer__social a img {
@@ -925,19 +974,19 @@ picture {
 }
 
 .homepage {
-  margin-top: 30px;
-  padding: 60px 0 0;
-  border-radius: 90px;
+  padding: 30px 15px;
+  border-radius: 50px;
   background-color: rgba(11, 26, 76, 0.95);
 }
 @media screen and (max-width: 767px) {
   .homepage {
-    padding-top: 30px;
+    padding-left: 0;
+    padding-right: 0;
   }
 }
 .homepage__wrapper {
   padding: 120px 90px;
-  border-radius: 50px 50px 0 0;
+  border-radius: 50px;
   background: -webkit-gradient(linear, left top, left bottom, from(#000E38), to(#1C2F6C));
   background: -o-linear-gradient(top, #000E38 0%, #1C2F6C 100%);
   background: linear-gradient(180deg, #000E38 0%, #1C2F6C 100%);
@@ -979,6 +1028,7 @@ picture {
 }
 @media screen and (max-width: 767px) {
   .homepage__row-4 .milestone__table-scroll-wrapper {
+    width: calc(100% + 35px);
     padding-left: 0;
   }
 }
@@ -2003,31 +2053,28 @@ picture {
 
 .tokenomics {
   padding-top: 100px;
-  padding-bottom: 200px;
+  padding-bottom: 100px;
 }
 @media screen and (max-width: 1279px) {
   .tokenomics {
     padding-top: 75px;
-    padding-bottom: 150px;
+    padding-bottom: 75px;
   }
 }
 @media screen and (max-width: 767px) {
   .tokenomics {
     padding-top: 50px;
-    padding-bottom: 100px;
+    padding-bottom: 50px;
   }
 }
 .tokenomics__title {
-  padding-bottom: 100px;
+  padding-bottom: 50px;
   font-weight: 900;
-  font-size: 48px;
+  font-size: 40px;
+  line-height: 74px;
   text-transform: uppercase;
+  letter-spacing: 3px;
   color: #FFFFFF;
-}
-@media screen and (max-width: 1535px) {
-  .tokenomics__title {
-    font-size: 42px;
-  }
 }
 @media screen and (max-width: 1023px) {
   .tokenomics__title {
@@ -2036,7 +2083,6 @@ picture {
 }
 @media screen and (max-width: 767px) {
   .tokenomics__title {
-    padding-bottom: 75px;
     font-size: 30px;
   }
 }
@@ -2053,10 +2099,12 @@ picture {
           flex-direction: column;
   align-items: center;
   padding: 100px 100px 80px;
+  border-radius: 10px;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 50px;
-  background-color: #01052F;
+  background: -webkit-gradient(linear, left top, right top, from(#09103A), color-stop(45.83%, #493E3E), to(#09103A));
+  background: -o-linear-gradient(left, #09103A 0%, #493E3E 45.83%, #09103A 100%);
+  background: linear-gradient(90deg, #09103A 0%, #493E3E 45.83%, #09103A 100%);
 }
 @media screen and (max-width: 1365px) {
   .tokenomics__wrapper {
@@ -2081,6 +2129,24 @@ picture {
   max-width: 100%;
   height: auto;
   margin: 40px auto;
+}
+.tokenomics__wrapper h3 {
+  font-size: 48px;
+}
+@media screen and (max-width: 1439px) {
+  .tokenomics__wrapper h3 {
+    font-size: 42px;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .tokenomics__wrapper h3 {
+    font-size: 35px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .tokenomics__wrapper h3 {
+    font-size: 30px;
+  }
 }
 .tokenomics__wrapper h4 {
   font-weight: 900;
