--- a/src/pug/components/common/_header.pug
+++ b/src/pug/components/common/_header.pug
@@ -8,7 +8,7 @@ nav#header.header
         div
           .logo.logo--header
             a.logo__btn(href="/index.html")
-              img(src="img/logo.svg" alt="")
+              img(src="img/logo.png" srcset='img/logo@2x.png 2x' alt="")
 
           .c-btn__wrapper
             a.c-btn(href="#")
@@ -33,8 +33,8 @@ nav#header.header
             a.c-btn(href="#")
               span chart
             a.c-btn(href="#")
-              span buy on uniswap
+              span buy now
             a.c-btn(href="#")
-              span COnnect wallet
+              span Connect wallet
 
 // HEADER :: END
