--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -5,6 +5,15 @@ pageClassName: p-home
 ---
 extends shared/_layout
 
+block modal
+  mixin modalContent()
+    .c-modal__body
+      include components/homepage
+
+  +modal('welcomeModal', 'modalContent')
+  a(href="#welcomeModal" data-effect='mfp-zoom-in' popup-js)
+
+
 block content
   main.main(class!= pageClassName)
 
