--- a/src/scss/_components/homepage.scss
+++ b/src/scss/_components/homepage.scss
@@ -1,17 +1,19 @@
 // SECTION :: START
 
 .homepage {
-  margin-top: 30px;
-  padding: 60px 0 0;
-  border-radius: 90px;
+  //margin-top: 30px;
+  padding: 30px 15px;
+  //padding: 60px 0 0;
+  border-radius: 50px;
   background-color: rgba(11, 26, 76, 0.95);
   @include adaptive(767) {
-    padding-top: 30px;
+    padding-left: 0;
+    padding-right: 0;
   }
 
   &__wrapper {
     padding: 120px 90px;
-    border-radius: 50px 50px 0 0;
+    border-radius: 50px;
     background: linear-gradient(180deg, #000E38 0%, #1C2F6C 100%);
     backdrop-filter: blur(4px);
     @include adaptive(1279) {
@@ -46,6 +48,7 @@
 
       .milestone__table-scroll-wrapper {
         @include adaptive(767) {
+          width: calc(100% + 35px);
           padding-left: 0;
         }
       }
