--- a/src/scss/_components/tokenomics.scss
+++ b/src/scss/_components/tokenomics.scss
@@ -2,30 +2,28 @@
 
 .tokenomics {
   padding-top: 100px;
-  padding-bottom: 200px;
+  padding-bottom: 100px;
   @include adaptive(1279) {
     padding-top: 75px;
-    padding-bottom: 150px;
+    padding-bottom: 75px;
   }
   @include adaptive(767) {
     padding-top: 50px;
-    padding-bottom: 100px;
+    padding-bottom: 50px;
   }
 
   &__title {
-    padding-bottom: 100px;
+    padding-bottom: 50px;
     font-weight: 900;
-    font-size: 48px;
+    font-size: 40px;
+    line-height: 74px;
     text-transform: uppercase;
+    letter-spacing: 3px;
     color: #FFFFFF;
-    @include adaptive(1535) {
-      font-size: 42px;
-    }
     @include adaptive(1023) {
       font-size: 35px;
     }
     @include adaptive(767) {
-      padding-bottom: 75px;
       font-size: 30px;
     }
   }
@@ -36,9 +34,9 @@
     flex-direction: column;
     align-items: center;
     padding: 100px 100px 80px;
+    border-radius: 10px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 50px;
-    background-color: #01052F;
+    background: linear-gradient(90deg, #09103A 0%, #493E3E 45.83%, #09103A 100%);
     @include adaptive(1365) {
       padding: 50px 50px 30px;
     }
@@ -61,6 +59,19 @@
       max-width: 100%;
       height: auto;
       margin: 40px auto;
+    }
+
+    h3 {
+      font-size: 48px;
+      @include adaptive(1439) {
+        font-size: 42px;
+      }
+      @include adaptive(1023) {
+        font-size: 35px;
+      }
+      @include adaptive(767) {
+        font-size: 30px;
+      }
     }
 
     h4 {
