--- a/src/scss/_macros/_btn.scss
+++ b/src/scss/_macros/_btn.scss
@@ -3,44 +3,48 @@
 .c-btn {
   outline: none;
   cursor: pointer;
-  overflow: hidden;
+  //overflow: hidden;
   position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
   width: auto;
-  height: 50px;
+  height: 40px;
   margin: 0;
-  padding-left: 20px;
-  padding-right: 20px;
-  border-radius: 19px;
+  padding: 0;
+  border-radius: 100px;
   box-shadow: none;
   border: none;
-  background: linear-gradient(180deg, #F53548 0%, #9803A4 100%);
-  @include adaptive(767) {
-    height: 45px;
-    padding-left: 10px;
-    padding-right: 10px;
+  background-color: #552222;
+
+  &:after,
+  &:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    width: 50%;
+    height: 100%;
+    border: 4px solid #F55757;
+    background-color: #552222;
+    filter: blur(15px);
+    @include transition(opacity);
   }
 
   &:after {
-    content: '';
-    opacity: 0;
-    position: absolute;
-    top: 0;
     left: 0;
-    transform: translateY(100%);
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(180deg, #9803A4 0%, #F53548 100%);
-    @include transition(opacity, transform);
+    border-radius: 50% 0 0 50px;
+  }
+
+  &:before {
+    right: 0;
+    border-radius: 0 50% 50px 0;
   }
 
   &:hover {
+    &:before,
     &:after {
-      opacity: 1;
-      transform: translateY(0);
-      @include transition(opacity, transform);
+      opacity: 0.45;
+      @include transition(opacity);
     }
   }
 
@@ -52,12 +56,26 @@
   span {
     z-index: 2;
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 2rem;
     @extend %fontFiraSans;
     font-size: 14px;
     text-align: center;
     text-transform: uppercase;
     color: #FFFFFF;
+    background-image: url('../img/btn-bg.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     @include adaptive(767) {
+      padding-left: 10px;
+      padding-right: 10px;
       font-size: 13px;
     }
   }
